@@ -130,7 +130,7 @@ LDFLAGS-libJISX0213.so = $(LDFLAGS-soname-fname)
 
 distribute := gconv-modules extra-module.mk gap.awk gaptab.awk gconv.map    \
 	      gen-8bit.sh gen-8bit-gap.sh gen-8bit-gap-1.sh		    \
-	      TESTS $(filter-out testdata/CVS%, $(wildcard testdata/*))	    \
+	      TESTS $(wildcard testdata/*)	    \
 	      TESTS2 run-iconv-test.sh tst-tables.sh tst-table.sh	    \
 	      tst-table-charmap.sh tst-table-from.c tst-table-to.c	    \
 	      EUC-JP.irreversible ISIRI-3342.irreversible SJIS.irreversible \
